--- a/docs/install.txt
+++ b/docs/install.txt
@@ -1,6 +1,10 @@
 INSTALL/UNISTALL
 =================
 
-No special measures necessary, follow the standard installation process extract the /xforms folder into the ../modules directory. Install the module through Admin -> System Module -> Modules.
+No special measures necessary, follow the standard installation process.
 
-Detailed instructions on installing modules are available in the XOOPS Operations Manual (http://goo.gl/adT2i)
+Extract the /xforms folder into the ./modules folder. Install the module
+through Admin -> System Module -> Modules.
+
+Detailed instructions on installing modules are available in the
+XOOPS Operations Manual (https://www.gitbook.com/book/xoops/xoops-operations-guide/)
