--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,139 +1,143 @@
-2.00 Alpha 2 [Not Released]
-=================================
-- added namespace support (\XoopsModules\Xforms)
-- added ./preloads to support namespace & autoloader support
-- added display of help for import from Liaise and eForms in Admin Help section
-- added HTML 'tabindex' to form elements on front side rendering to allow tabbing through fields
-- added display of # of active/inactive/total forms dashboard in ./admin/index.php
-- added display of 'type' of element in table for ./admin/editelement.php
-- added multiple missing language defines (primarily in admin)
-- added loading of FormsHandler in ./admin/admin_header.php
-- added FormInput class - an enhanced HTML5 &lt;input&gt; class
-- added FormRaw class - allows rendering HTML in XoopsForm objects
-- added PAYPAL donate button in Admin About (links to XOOPS Foundation)
-- added XoopsSecurity checks on form submittals
-- added Modernizer jscript to assist element rendering in browsers lacking some HTML5 support
-- added images for jquery-ui and 16x16 icons
-- added css for jquery-ui display
-- added SQL key `disp_ele_by_form` in xforms_element table to improve performance
-- added check on install/upgrade to make sure PHP & XOOPS meets min version
-- added import from Liaise and eForms modules
-- added edit icon/link for admins on frontside
-- added block to display list of forms (permissions aware)
-- added block to display a single form (permissions aware)
-- added search - finds term in form Title, Description or Intro text (permissions aware)
-- added color, date, email, number, obfuscated, pattern, range, time, and url element types
-- added module specific CAPTCHA settings in Preferences
-- added PAYPAL donate button in Admin About (links to XOOPS Foundation)
-- added ability to purge reports by date
-- added ability to export CSV horizontal and vertical reports
-- added ability to export HTML horizontal and vertical reports
-- added display of help for form elements in Admin Help section
-- added display of open issues in Admin Help section
-- added XoopsPageNav - page navigation in Admin form/report listing
-- added new mailer template (xforms_pm.tpl) for PM messages to remove html tags
-- added ./include/common DEFINEs for consistency with other XOOPS modules
-- changed module logo image name from logo.png to logoModule.png
-- changed PHP each() to foreach() - each() deprecated in PHP 7.2.0+
-- changed intval to (int) where appropriate
-- changed calls to \MyTextSanitizer::makeTboxData4PreviewInForm (deprecated) to htmlSpecialChars
-- changed to use Xmf\Request for var validation/filtering
-- changed to use Xmf for language loading functions
-- changed to require XOOPS 2.5.9+ - required to work around core CAPTCHA instance bug
-- changed unnecessary double-quote to single-quote in English language files
-- changed 'AM_XFORMS_FORM_NOTEXISTS' in english folder to english
-- changed undefined _LIASE_ERR_INVALIDMAIL to _MD_XFORMS_ERR_INVALIDMAIL in ./include/form_execute.php
-- changed help.html file extension to .tpl
-- changed link to online documentation in help (mamba)
-- changed ./docs/licence.txt to ./docs/license.txt for consistency w/ other modules
-- changed ./common.php to load Helper and check Session for upload directory
-- changed ./include/functions.php functions to Utilities class methods (removed ./include/functions.php)
-- changed Admin editors to use XOOPS Preferences to select editor instead of forcing DHTML editor
-- changed Admin input forms to use Xforms\FormInput to improve input data integrity
-- changed to only show Report link/icon in Admin page if a report exists for the form
-- changed to only show the form on Admin report page if a report exists for the form
-- changed XformsElements class name to Xforms\Element to closer reflect table changes, etc.
-- changed to use Xmf\Module\Helper class instead of module specific helpers
-- changed to use Xmf\Module\Helper\Permission class instead of 'direct' access method
-- changed Xforms\ElementHandler to be an extension of XoopsPersistableObjectHandler
-- changed Xforms\FormsHandler to be an extension of XoopsPersistableObjectHandler
-- changed Xforms\UserdataHandler to be an extension of XoopsPersistableObjectHandler
-- changed Xforms\MediaUploader to be an extension of XoopsMediaUploader
-- changed internal variable/function/method naming for PSRxx
-- changed to refactor how options were added to checkbox and radio elements
-- changed copyright notice in source files (now refers to xoops.org instead of sourceforge)
-- changed mime type definitions to use XOOPS core mime type definitions
-- changed install/update/uninstall routines to use install.php/update.php/uninstall.php respectively
-- combined ./include/form_execute.php into ./index.php since it's the only place it's used
-- deprecated methods with same name as classes to use __construct instead (for PHP 7)
-- fixed bug where module wasn't checking for Profile module before trying to use Profile feature(s)
-- fixed bug where Select element box size wasn't being rendered correctly
-- fixed pass-by-reference usage for non-vars
-- moved admin ele_* files to ./admin/elements folder
-- removed Excel exporting - was actually exporting HTML reports (replaced with CSV reports)- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc)
-- removed instances of PHP 'extract' for security improvement
-- removed dbupdater.php (XformsTable and XformsDbupdater classes), was not being used
-- removed get_magic_quotes_gpc, was removed from starting with PHP 5.4
-- removed rename_fields(), was not being used
-- removed commented out code (various files)
-- removed getMimeType() in ./file.php and replaced with XOOPS Mimetypes
-- removed Filechecker class (and file), was not being used
-- removed DirectoryChecker class (and file), was not being used
-- removed xforms_tableExists(), was not being used
-- removed convertorderbyin(), was not being used
-- removed convertorderbytrans(), was not being used
-- removed convertorderbyout(), was not being used
-- removed xforms_updateRating(), was not being used
-- removed xforms_categoriesCount(), was not being used
-- removed xforms_getTotalDownloads(), was not being used
-- removed xforms_headerImage(), was not being used- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc)
-- removed xforms_displayImage(), was not being used
-- removed xforms_createThumb(), was not being used
-- removed xforms_isNewImage(), was not being used
-- removed xforms_getDownloadTime(), was not being used
-- removed xforms_strrrchr(), was not being used
-- removed xforms_allowedMimetypes(), was not being used
-- removed xforms_uploading(), was not being used
-- removed xforms_download(), was not being used
-- removed xforms_getForum(), was not being used
-- removed xforms_mirrorOnline(), was not being used
-- removed xforms_displayIcons(), was not being used
-- removed DISPLAYICONS_xxx constants, were not being used
-- removed xforms_serverStats(), was not being used
-- removed xforms_toolbar(), was not being used
-- removed xforms_savePermissions(), was not being used
-- removed xforms_savePermissions(), was not being used
-- removed xforms_seo_genUrl(), was not being used
-- removed xforms_formatErrors(), was not being used
-- removed xforms_getCurrentPage(), was not being used
-- removed xforms_getCurrentUrls(), was not being used
-- removed xforms_getCookieVar(), was not being used
-- removed xforms_setCookieVar(), was not being used- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc)
-- removed xforms_getHandler(), was not being used
-- removed xforms_module_home(), was not being used
-- removed xforms_xoops_cp_header(), was not being used
-- removed xforms_lettersChoice(), was not being used
-- removed xforms_sortCategories(), was not being used
-- removed xforms_checkModule(), was not being used
-- removed xforms_delDir(), was not being used
-- removed xforms_copyDir(), was not being used
-- removed xforms_copyFile(), was not being used
-- removed xforms_makeDir(), was not being used
-- removed xforms_getDir(), was not being used
-- removed xforms_bytesToSize1000(), was not being used
-- removed xforms_bytesToSize1024(), was not being used
-- removed xforms_sizeToBytes1024(), was not being used
-- removed xforms_cleanvars(), was not being used
-- removed dormant swish-e code (was never implemented)
-- removed TruncateHTML from cakephp.org (was never implemented)
-- removed traces of SEO code (was never implemented)
-- removed ./xforms (ver 1.21 code folder)
-- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc)
-- renamed ./admin/elements/ele_check.php to ele_checkbox.php
-- renamed ./docs/licence.txt to license.txt (cosistency between modules)
-- updated README.md
-- updated required XOOPS, PHP, SQL versions
-- updated templates to use classes where appropriate
+<h5>2.00 Alpha 3    [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.6
+<hr>
+- added namespace support (\XoopsModules\Xforms) (zyspec)
+- added ./preloads to support namespace & autoloader support (zyspec)
+- added display of help for import from Liaise and eForms in Admin Help section (zyspec)
+- added HTML 'tabindex' to form elements on front side rendering to allow tabbing through fields (zyspec)
+- added display of # of active/inactive/total forms dashboard in ./admin/index.php (zyspec)
+- added display of 'type' of element in table for ./admin/editelement.php (zyspec)
+- added multiple missing language defines (primarily in admin) (zyspec)
+- added loading of FormsHandler in ./admin/admin_header.php (zyspec)
+- added FormInput class - an enhanced HTML5 &lt;input&gt; class (zyspec)
+- added FormRaw class - allows rendering HTML in XoopsForm objects (zyspec)
+- added PAYPAL donate button in Admin About (links to XOOPS Foundation) (zyspec)
+- added XoopsSecurity checks on form submittals (zyspec)
+- added Modernizer jscript to assist element rendering in browsers lacking some HTML5 support (zyspec)
+- added images for jquery-ui and 16x16 icons (zyspec)
+- added css for jquery-ui display (zyspec)
+- added SQL key `disp_ele_by_form` in xforms_element table to improve performance (zyspec)
+- added check on install/upgrade to make sure PHP & XOOPS meets min version (zyspec)
+- added import from Liaise and eForms modules (zyspec)
+- added edit icon/link for admins on frontside (zyspec)
+- added block to display list of forms (permissions aware) (zyspec)
+- added block to display a single form (permissions aware) (zyspec)
+- added search - finds term in form Title, Description or Intro text (permissions aware) (zyspec)
+- added color, date, email, number, obfuscated, pattern, range, time, and url element types (zyspec)
+- added PAYPAL donate button in Admin About (links to XOOPS Foundation) (zyspec)
+- added ability to purge reports by date (zyspec)
+- added ability to export CSV horizontal and vertical reports (zyspec)
+- added ability to export HTML horizontal and vertical reports (zyspec)
+- added display of help for form elements in Admin Help section (zyspec)
+- added display of open issues in Admin Help section (zyspec)
+- added XoopsPageNav - page navigation in Admin form/report listing (zyspec)
+- added new mailer template (xforms_pm.tpl) for PM messages to remove html tags (zyspec)
+- added ./include/common DEFINEs for consistency with other XOOPS modules (zyspec)
+- changed module logo image name from logo.png to logoModule.png (zyspec)
+- changed PHP each() to foreach() - each() deprecated in PHP 7.2.0+ (zyspec)
+- changed intval to (int) where appropriate (zyspec)
+- changed calls to \MyTextSanitizer::makeTboxData4PreviewInForm (deprecated) to htmlSpecialChars (zyspec)
+- changed to use Xmf\Request for var validation/filtering (zyspec)
+- changed to use Xmf for language loading functions (zyspec)
+- changed to require XOOPS 2.5.10+ (zyspec)
+- changed unnecessary double-quote to single-quote in English language files (zyspec)
+- changed 'AM_XFORMS_FORM_NOTEXISTS' in english folder to english (zyspec)
+- changed undefined _LIASE_ERR_INVALIDMAIL to _MD_XFORMS_ERR_INVALIDMAIL in ./include/form_execute.php (zyspec)
+- changed help.html file extension to .tpl (zyspec)
+- changed link to online documentation in help (mamba) (zyspec)
+- changed ./docs/licence.txt to ./docs/license.txt for consistency w/ other modules (zyspec)
+- changed ./common.php to load Helper and check Session for upload directory (zyspec)
+- changed ./include/functions.php functions to Utilities class methods (removed ./include/functions.php) (zyspec)
+- changed Admin editors to use XOOPS Preferences to select editor instead of forcing DHTML editor (zyspec)
+- changed Admin input forms to use Xforms\FormInput to improve input data integrity (zyspec)
+- changed to only show Report link/icon in Admin page if a report exists for the form (zyspec)
+- changed to only show the form on Admin report page if a report exists for the form (zyspec)
+- changed XformsElements class name to Xforms\Element to closer reflect table changes, etc. (zyspec)
+- changed to use Xmf\Module\Helper class instead of module specific helpers (zyspec)
+- changed to use Xmf\Module\Helper\Permission class instead of 'direct' access method (zyspec)
+- changed Xforms\ElementHandler to be an extension of XoopsPersistableObjectHandler (zyspec)
+- changed Xforms\FormsHandler to be an extension of XoopsPersistableObjectHandler (zyspec)
+- changed Xforms\UserdataHandler to be an extension of XoopsPersistableObjectHandler (zyspec)
+- changed Xforms\MediaUploader to be an extension of XoopsMediaUploader (zyspec)
+- changed internal variable/function/method naming for PSRxx (zyspec)
+- changed to refactor how options were added to checkbox and radio elements (zyspec)
+- changed copyright notice in source files (now refers to xoops.org instead of sourceforge) (zyspec)
+- changed mime type definitions to use XOOPS core mime type definitions (zyspec)
+- changed install/update/uninstall routines to use install.php/update.php/uninstall.php respectively (zyspec)
+- combined ./include/form_execute.php into ./index.php since it's the only place it's used (zyspec)
+- deprecated methods with same name as classes to use __construct instead (for PHP 7) (zyspec)
+- fixed bug where module wasn't checking for Profile module before trying to use Profile feature(s) (zyspec)
+- fixed bug where Select element box size wasn't being rendered correctly (zyspec)
+- fixed pass-by-reference usage for non-vars (zyspec)
+- moved admin ele_* files to ./admin/elements folder (zyspec)
+- removed Excel exporting - was actually exporting HTML reports (replaced with CSV reports) (zyspec)
+- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc) (zyspec)
+- removed instances of PHP 'extract' for security improvement (zyspec)
+- removed dbupdater.php (XformsTable and XformsDbupdater classes), was not being used (zyspec)
+- removed get_magic_quotes_gpc, was removed from starting with PHP 5.4 (zyspec)
+- removed rename_fields(), was not being used (zyspec)
+- removed commented out code (various files) (zyspec)
+- removed getMimeType() in ./file.php and replaced with XOOPS Mimetypes (zyspec)
+- removed Filechecker class (and file), was not being used (zyspec)
+- removed DirectoryChecker class (and file), was not being used (zyspec)
+- removed xforms_tableExists(), was not being used (zyspec)
+- removed convertorderbyin(), was not being used (zyspec)
+- removed convertorderbytrans(), was not being used (zyspec)
+- removed convertorderbyout(), was not being used (zyspec)
+- removed xforms_updateRating(), was not being used (zyspec)
+- removed xforms_categoriesCount(), was not being used (zyspec)
+- removed xforms_getTotalDownloads(), was not being used (zyspec)
+- removed xforms_headerImage(), was not being used- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc) (zyspec)
+- removed xforms_displayImage(), was not being used (zyspec)
+- removed xforms_createThumb(), was not being used (zyspec)
+- removed xforms_isNewImage(), was not being used (zyspec)
+- removed xforms_getDownloadTime(), was not being used (zyspec)
+- removed xforms_strrrchr(), was not being used (zyspec)
+- removed xforms_allowedMimetypes(), was not being used (zyspec)
+- removed xforms_uploading(), was not being used (zyspec)
+- removed xforms_download(), was not being used (zyspec)
+- removed xforms_getForum(), was not being used (zyspec)
+- removed xforms_mirrorOnline(), was not being used (zyspec)
+- removed xforms_displayIcons(), was not being used (zyspec)
+- removed DISPLAYICONS_xxx constants, were not being used (zyspec)
+- removed xforms_serverStats(), was not being used (zyspec)
+- removed xforms_toolbar(), was not being used (zyspec)
+- removed xforms_savePermissions(), was not being used (zyspec)
+- removed xforms_savePermissions(), was not being used (zyspec)
+- removed xforms_seo_genUrl(), was not being used (zyspec)
+- removed xforms_formatErrors(), was not being used (zyspec)
+- removed xforms_getCurrentPage(), was not being used (zyspec)
+- removed xforms_getCurrentUrls(), was not being used (zyspec)
+- removed xforms_getCookieVar(), was not being used (zyspec)
+- removed xforms_setCookieVar(), was not being used- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc) (zyspec)
+- removed xforms_getHandler(), was not being used (zyspec)
+- removed xforms_module_home(), was not being used (zyspec)
+- removed xforms_xoops_cp_header(), was not being used (zyspec)
+- removed xforms_lettersChoice(), was not being used (zyspec)
+- removed xforms_sortCategories(), was not being used (zyspec)
+- removed xforms_checkModule(), was not being used (zyspec)
+- removed xforms_delDir(), was not being used (zyspec)
+- removed xforms_copyDir(), was not being used (zyspec)
+- removed xforms_copyFile(), was not being used (zyspec)
+- removed xforms_makeDir(), was not being used (zyspec)
+- removed xforms_getDir(), was not being used (zyspec)
+- removed xforms_bytesToSize1000(), was not being used (zyspec)
+- removed xforms_bytesToSize1024(), was not being used (zyspec)
+- removed xforms_sizeToBytes1024(), was not being used (zyspec)
+- removed xforms_cleanvars(), was not being used (zyspec)
+- removed dormant swish-e code (was never implemented) (zyspec)
+- removed TruncateHTML from cakephp.org (was never implemented) (zyspec)
+- removed traces of SEO code (was never implemented) (zyspec)
+- removed ./xforms (ver 1.21 code folder) (zyspec)
+- removed '/' from HTML void tags (&lt;br&gt;, &lt;img&gt;, etc) (zyspec)
+- renamed ./admin/elements/ele_check.php to ele_checkbox.php (zyspec)
+- renamed ./docs/licence.txt to license.txt (cosistency between modules) (zyspec)
+- updated README.md (zyspec)
+- updated required XOOPS, PHP, SQL versions (zyspec)
+- updated templates to use classes where appropriate (zyspec)
+- added Sample Data buttons in Admin (mamba)
+- added option to write migrate schema,  (mamba)
+- added Blocksadmin in Admin (mamba)
+
 
 2.00 Alpha 1 [2014-10-08]
 =================================
