--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,4 @@
-<h5>2.00 Alpha 3    [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.6
+<h5>2.00 Alpha 3    [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.15, PHP 8.02
 <hr>
 - added namespace support (\XoopsModules\Xforms) (zyspec)
 - added ./preloads to support namespace & autoloader support (zyspec)
