--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,4 @@
-<h5>2.00 Alpha 3    [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.15, PHP 8.02
+<h5>2.00 Alpha 3    [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.15, PHP 8.02
 <hr>
 - added namespace support (\XoopsModules\Xforms) (zyspec)
 - added ./preloads to support namespace & autoloader support (zyspec)
@@ -137,6 +137,9 @@
 - added Sample Data buttons in Admin (mamba)
 - added option to write migrate schema,  (mamba)
 - added Blocksadmin in Admin (mamba)
+- added Testdata (mamba)
+- added TestdataButtons in Admin (mamba)
+- PSR-12 and PHP8 updates/cosmetics (mamba)
 
 
 2.00 Alpha 1 [2014-10-08]
