--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,7 @@
+<h5>2.0.1 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.0, PHP 8.0.1
+ - semantic versioning (mamba/goffy)
+ - fixed bug in creation text elements (heyula/goffy)
+
 <h5>2.00 Alpha 3    [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.15, PHP 8.02
 <hr>
 - added namespace support (\XoopsModules\Xforms) (zyspec)
