--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,4 @@
-<h5>2.0.1 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.0, PHP 8.0.1
+<h5>2.0.0 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 6
 <hr>
 - semantic versioning (mamba/goffy)
 - fixed bug in creation text elements (heyula/goffy)
@@ -7,6 +7,7 @@
 - updates/cosmetics (mamba)
 - replace index.html with index.php (mamba)
 - add TestdataButtons (mamba)
+- refactor Blocksadmin (mamba)
 
 
 <h5>2.00 Alpha 3    [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.15, PHP 8.02
