--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,4 @@
-<h5>2.0.0 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 6
+<h5>2.0.0 Beta 1   [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
 <hr>
 - semantic versioning (mamba/goffy)
 - fixed bug in creation text elements (heyula/goffy)
@@ -8,6 +8,7 @@
 - replace index.html with index.php (mamba)
 - add TestdataButtons (mamba)
 - refactor Blocksadmin (mamba)
+- index.html in /preloads (mamba)
 
 
 <h5>2.00 Alpha 3    [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.15, PHP 8.02
